martian-derive/tests/ui_martian_type/derive_on_tuple.rs
use martian_derive::MartianType;

#[derive(MartianType)]
struct TupleStruct(u8, i32, String);

fn main() {}
